# XSBench

./: .dir-locals.el  .gitignore  XSbench_shared_header.h  a.out
.github/workflows/: oneapi.yml
cuda/: CMakeLists.txt  GridInit.cu  Main.cu  Makefile  Materials.cu  Simulation.cu  XSbench_header.cuh  XSutils.cu  io.cu
hip/: CMakeLists.txt  GridInit.cpp  Main.cpp  Makefile  Materials.cpp  Simulation.cpp  XSbench_header.h  XSutils.cpp  io.cpp
kokkos/: CMakeLists.txt  Main.cpp  Makefile  Simulation.cpp  XSbench_header.hpp  io.cpp
openacc/: CMakeLists.txt  GridInit.c  Main.c  Makefile  Simulation.c  XSbench_header.h  XSutils.c  io.c
openmp-offload/: CMakeLists.txt  Main.c  Makefile  Simulation.c  XSbench_header.h  io.c
raja/: CMakeLists.txt  GridInit.cpp  Main.cpp  Makefile  Materials.cpp  Simulation.cpp  XSbench_header.h  XSbench_header.hpp  XSutils.cpp  io.cpp
sycl/: CMakeLists.txt  GridInit.cpp  Main.cpp  Makefile  Simulation.cpp  XSbench_header.h  io.cpp
sycl-acc/: Simulation.cpp
sycl-usm/: GridInit.cpp  Makefile  Materials.cpp  Simulation.cpp  XSutils.cpp
